tests/machine/x/scala/list_nested_assign.error
exit status 1
/workspace/mochi/tests/machine/x/scala/list_nested_assign.scala:4: error: value update is not a member of List[Int]
    matrix(1)(0) = 5
          ^
one error found
